--- a/src/ServiceInsight.Desktop/ServiceInsight.Desktop.csproj
+++ b/src/ServiceInsight.Desktop/ServiceInsight.Desktop.csproj
@@ -218,6 +218,9 @@
     <Compile Include="Models\ExceptionDetails.cs" />
     <Compile Include="Modules\InterfacesModule.cs" />
     <Compile Include="Saga\ISagaWindowView.cs" />
+    <Compile Include="Saga\SagaMessage.cs" />
+    <Compile Include="Saga\SagaStep.cs" />
+    <Compile Include="Saga\SagaUpdatedValue.cs" />
     <Compile Include="Saga\SagaWindowView.xaml.cs">
       <DependentUpon>SagaWindowView.xaml</DependentUpon>
     </Compile>
